src/snapshots/encapsulate__field__parse_attr_bad-2.snap
---
source: src/field.rs
expression: attr
---
Attribute {
    pound_token: Pound,
    style: Outer,
    bracket_token: Bracket,
    path: Path {
        leading_colon: None,
        segments: [
            PathSegment {
                ident: Ident(
                    export_methods,
                ),
                arguments: None,
            },
        ],
    },
    tokens: TokenStream [
        Group {
            delimiter: Parenthesis,
            stream: TokenStream [
                Ident {
                    sym: fn,
                },
                Ident {
                    sym: signal,
                },
                Group {
                    delimiter: Parenthesis,
                    stream: TokenStream [
                        Punct {
                            char: '&',
                            spacing: Alone,
                        },
                        Ident {
                            sym: self,
                        },
                        Punct {
                            char: ',',
                            spacing: Alone,
                        },
                        Ident {
                            sym: stage,
                        },
                        Punct {
                            char: ':',
                            spacing: Alone,
                        },
                        Ident {
                            sym: usize,
                        },
                    ],
                },
                Punct {
                    char: ',',
                    spacing: Alone,
                },
                Ident {
                    sym: fn,
                },
                Ident {
                    sym: wait_for,
                },
                Group {
                    delimiter: Parenthesis,
                    stream: TokenStream [
                        Punct {
                            char: '&',
                            spacing: Alone,
                        },
                        Ident {
                            sym: self,
                        },
                        Punct {
                            char: ',',
                            spacing: Alone,
                        },
                        Ident {
                            sym: stage,
                        },
                        Punct {
                            char: ':',
                            spacing: Alone,
                        },
                        Ident {
                            sym: usize,
                        },
                    ],
                },
                Punct {
                    char: ',',
                    spacing: Alone,
                },
            ],
        },
    ],
}
