src/snapshots/encapsulate__field__parse_attr_bad.snap
---
source: src/field.rs
assertion_line: 45
expression: attr.pretty()
---
"# [export_methods (fn signal (& self , stage : usize) , fn wait_for (& self , stage : usize) ,)]"
