src/snapshots/encapsulate__field__parse_field_with_string-2.snap
---
source: src/field.rs
expression: encapsulation_field
---
EncapsulationField {
    ident: Some(
        Ident(
            signal,
        ),
    ),
    export_methods_str: [
        "fn signal(&self, stage: usize)",
    ],
    export_methods: [],
}
