src/snapshots/encapsulate__field__parse_field_with_string.snap
---
source: src/field.rs
expression: get_field().pretty()
---
"# [encapsulation (export_methods = \"fn signal(&self, stage: usize)\")] pub signal : Arc < Signal >"
